<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/new_program_layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/unit300"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    app:behavior_peekHeight="@dimen/unit60"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:id="@+id/program_create"
        android:layout_width="match_parent"
        android:layout_height="@dimen/unit60"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/program_create"
        android:textColor="@android:color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:isScrollContainer="false"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/program_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/unit8"
                android:hint="@string/program_name"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/program_image_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/unit8"
                android:text="@string/program_image" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/program_image_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/program_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/unit8"
                android:text="@string/program_save" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>