<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:elevation="100dp"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="8dp">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="4dp"
                    android:text="@string/create_new_statement" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/conditionalCardView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="100dp"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="8dp">

                <LinearLayout
                    android:id="@+id/conditionalStatementLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/create_conditional_text" />

                    <EditText
                        android:id="@+id/newConditionalEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <RadioGroup
                        android:id="@+id/truthRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.34"
                            android:text="@string/new_conditional_value_select_text" />

                        <RadioButton
                            android:id="@+id/trueButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:padding="4dp"
                            android:text="True" />

                        <RadioButton
                            android:id="@+id/falseButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:padding="4dp"
                            android:text="False" />
                    </RadioGroup>

                    <Button
                        android:id="@+id/saveNewLogicStatement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/create_new_conditional"
                        android:textColor="@color/white" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.4"
                    android:background="@color/darkGrey"></View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/or_text" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="3dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.4"
                    android:background="@color/darkGrey"></View>

            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/outputCardView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="100dp"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="8dp">

                <LinearLayout
                    android:id="@+id/outputStatementLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/create_output_text" />

                    <EditText
                        android:id="@+id/newOutputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/selectImageFromGallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="4dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:clickable="true"
                        android:text="@string/select_output_image_from_gallery"
                        android:textColor="@color/colorPrimaryDark" />

                    <ImageView
                        android:id="@+id/selectedImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp" />

                    <Button
                        android:id="@+id/saveNewOutputStatement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/create_new_output"
                        android:textColor="@color/white" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>