<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/formView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="10dp"
                android:elevation="100dp"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="8dp">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="4dp"
                    android:text="@string/sendfeedback_title" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/feedbackTitleCardView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="100dp"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="8dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/feedbackTitleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sendfeedback_formtitle"
                        android:maxLength="40" />

                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/feedbackDetailCardView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:elevation="100dp"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="8dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/feedbackDetailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:hint="@string/sendfeedback_formcontent"
                        android:inputType="textMultiLine"
                        android:lines="6" />

                </android.support.design.widget.TextInputLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/sendFeedBackButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:text="@string/save_text"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/successView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_completed" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:text="@string/sendfeedback_thankyoumessage" />

        <Button
            android:id="@+id/feedbackSentOkButton"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="OK" />

    </LinearLayout>

</RelativeLayout>